WHAT IS NEW?                                                   

April ?? 2005 [quaternion]

  * GPL Licensed source code. See LICENSE.txt

  * New plotscripting commands: init mouse, mouse pixel x, mouse pixel
    y, mouse button, put mouse, mouse region, NPC at pixel
    Thanks to Ralph Versteegen (TeeEmCee)

  * Very nice plotscript buffer usage optimization. Scripts that run more
    than once take no extra space in the buffer, allowing you to write
    recursive scripts without fear of buffer-overflow. Thanks to Ralph
    Versteegen (TeeEmCee)

  * Bugs fixed thanks to help from Simon Bradley

    * "equip where" plotscripting command always uses hero #0's
       equipability data no matter which hero you specify

  * Bugs fixed thanks to help from Ralph Versteegen (TeeEmCee)

    * bug  1: item-based stat increases go away after level-up
    * bug 32: blank exp/gold box after battle when you earn no exp/gold
    * bug 47: Off by one bug in assigning script buffer and heap wastes
              memory
    * bug 54: Aim math text for Magic damage in CUSTOM is incorrect

  * Bugs fixed thanks to help from Mike Caron (pkmnfrk)

    * bug 40: Maps can be resized to invalid dimensions
    * bug 35: enemy spawned backwards in place of"flee-instead-of-die"...
    * bug 20: CUSTOM does no error checking for NPCs that point to text
              boxes that have been deleted

  * Code cleanup (things that only developers will notice)

     * Cleaned up build system to make it possible for people other than
       me to compile if they can get ahold of a copy of QuickBasic 4.5
     * Support for compiling with QuickBasic 7.1 thanks to Mike Caron
       (pkmnfrk) and Ralph Versteegen (TeeEmCee)
     * Massive indentation cleanup thanks to David Gowers (NeoTA)
     * Assembly DECLARE cleanup (moved to to allmodex.bi) thanks to Simon
       Bradley


June 28 2004 [ozarks]

  * Everybody who has worked so hard to try to plotscript this is