@@ -202,7 +202,7 @@ Alphabetical Index
 <a href="#about-resumeobstruction">resume obstruction</a><br>
 <a href="#about-resumeoverlay">resume overlay</a><br>
 <a href="#about-resumeplayer">resume player</a><br>
-<a href="#about-resumerandomenemys">resume random enemys</a><br>
+<a href="#about-resumerandomenemies">resume random enemies</a><br>
 <a href="#about-return">return(value)</a><br>
 <a href="#about-roominactiveparty">room in active party</a><br>
 <a href="#about-savemenu">save menu</a><br>
@@ -250,7 +250,7 @@ Alphabetical Index
 <a href="#about-suspendobstruction">suspend obstruction</a><br>
 <a href="#about-suspendoverlay">suspend overlay</a><br>
 <a href="#about-suspendplayer">suspend player</a><br>
-<a href="#about-suspendrandomenemys">suspend random enemys</a><br>
+<a href="#about-suspendrandomenemies">suspend random enemies</a><br>
 <a href="#about-swapbyname">swap by name (name,name)</a><br>
 <a href="#about-swapbyposition">swap by position (position,position)</a><br>
 <a href="#about-swapinhero">swap in hero (who)</a><br>
@@ -639,20 +639,24 @@ Reverses the <a href="#about-suspendcaterpillar">suspend caterpillar</a> command
 </p>
 
 <a name="about-suspendrandomenemys"></a>
+<a name="about-suspendrandomenemies"></a>
 <p>
 <tt>
-<b><font color="yellow">suspend random enemys</font></b><br>
+<b><font color="yellow">suspend random enemies</font></b><br>
 Prevents enemies from attacking your party while walking over tiles
 that can normally spawn random battles. This is useful to prevent
 battles from interrupting a plotscript.
+(for backwards compatability, the misspelled version, <font color="yellow">suspend random enemys</font> is also supported)
 </tt>
 </p>
 
 <a name="about-resumerandomenemys"></a>
+<a name="about-resumerandomenemies"></a>
 <p>
 <tt>
-<b><font color="yellow">resume random enemys</font></b><br>
-Undoes the <a href="#about-suspendrandomenemys">suspend random enemys</a> and allows random battles to occur as normal.
+<b><font color="yellow">resume random enemies</font></b><br>
+Undoes the <a href="#about-suspendrandomenemies">suspend random enemies</a> and allows random battles to occur as normal.
+(for backwards compatability, the misspelled version, <font color="yellow">resume random enemys</font> is also supported)
 </tt>
 </p>
 
